; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libpng/extr_pngmem.c_png_malloc_array_checked.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libpng/extr_pngmem.c_png_malloc_array_checked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PNG_SIZE_MAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32, i32, i64)* @png_malloc_array_checked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @png_malloc_array_checked(i32 %0, i32 %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  %9 = load i32, i32* %6, align 4
  %10 = sext i32 %9 to i64
  store i64 %10, i64* %8, align 8
  %11 = load i64, i64* %8, align 8
  %12 = load i64, i64* @PNG_SIZE_MAX, align 8
  %13 = load i64, i64* %7, align 8
  %14 = udiv i64 %12, %13
  %15 = icmp ule i64 %11, %14
  br i1 %15, label %16, label %22

16:                                               ; preds = %3
  %17 = load i32, i32* %5, align 4
  %18 = load i64, i64* %8, align 8
  %19 = load i64, i64* %7, align 8
  %20 = mul i64 %18, %19
  %21 = call i32* @png_malloc_base(i32 %17, i64 %20)
  store i32* %21, i32** %4, align 8
  br label %23

22:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %23

23:                                               ; preds = %22, %16
  %24 = load i32*, i32** %4, align 8
  ret i32* %24
}

declare dso_local i32* @png_malloc_base(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
